fixed gap

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ h1 {
   justify-content: center;
   align-items: start;
   position: relative;
+  gap: 0.6rem;
 }
 
 .list2 {
